fixed calculation box overflow and operator first entry bug

--- a/calculator.css
+++ b/calculator.css
@@ -6,6 +6,7 @@
     border-radius: 2em;
     margin: 0px,50px,0px,50px;
     grid-template-columns: repeat(4,1fr);
+    grid-template-rows: auto;
     align-items: center;
     justify-content: center;
     align-content: center;
@@ -45,6 +46,7 @@
     grid-column: 1/5;
     color: #7c7c7c;
     padding: 20px;
-    max-width:1em;
-
+    max-width:100%;
+    overflow-x:scroll;
+    text-overflow:ellipsis;
 }
